crates/aiken-lang/src/tests/snapshots/plus_binop.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\npub fn add_one(a) -> Int {\n  a + 1\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [
                    Arg {
                        arg_name: Named {
                            name: "a",
                            label: "a",
                            location: 15..16,
                            is_validator_param: false,
                        },
                        location: 15..16,
                        annotation: None,
                        tipo: (),
                    },
                ],
                body: BinOp {
                    location: 29..34,
                    name: AddInt,
                    left: Var {
                        location: 29..30,
                        name: "a",
                    },
                    right: Int {
                        location: 33..34,
                        value: "1",
                        base: Decimal {
                            numeric_underscore: false,
                        },
                    },
                },
                doc: None,
                location: 0..24,
                name: "add_one",
                public: true,
                return_annotation: Some(
                    Constructor {
                        location: 21..24,
                        module: None,
                        name: "Int",
                        arguments: [],
                    },
                ),
                return_type: (),
                end_position: 35,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
