crates/aiken-lang/src/tests/snapshots/preserve_associativity_parens_in_binop.snap
---
source: crates/aiken-lang/src/tests/format.rs
description: "Code:\n\npub fn bar() {\n  ( a || b ) || c\n}\n"
---
pub fn bar() {
  ( a || b ) || c
}
