crates/aiken-lang/src/tests/snapshots/record_create_labeled_with_field_access.snap
---
source: crates/aiken-lang/src/tests/parser.rs
description: "Code:\n\nfn create() {\n  some_module.User { name: \"Aiken\", age, thing: 2 }\n}\n"
---
Module {
    name: "",
    docs: [],
    type_info: (),
    definitions: [
        Fn(
            Function {
                arguments: [],
                body: Call {
                    arguments: [
                        CallArg {
                            label: Some(
                                "name",
                            ),
                            location: 35..48,
                            value: ByteArray {
                                location: 41..48,
                                bytes: [
                                    65,
                                    105,
                                    107,
                                    101,
                                    110,
                                ],
                                preferred_format: Utf8String,
                            },
                        },
                        CallArg {
                            label: Some(
                                "age",
                            ),
                            location: 50..53,
                            value: Var {
                                location: 50..53,
                                name: "age",
                            },
                        },
                        CallArg {
                            label: Some(
                                "thing",
                            ),
                            location: 55..63,
                            value: Int {
                                location: 62..63,
                                value: "2",
                                base: Decimal {
                                    numeric_underscore: false,
                                },
                            },
                        },
                    ],
                    fun: FieldAccess {
                        location: 16..32,
                        label: "User",
                        container: Var {
                            location: 16..27,
                            name: "some_module",
                        },
                    },
                    location: 16..65,
                },
                doc: None,
                location: 0..11,
                name: "create",
                public: false,
                return_annotation: None,
                return_type: (),
                end_position: 66,
                can_error: true,
            },
        ),
    ],
    kind: Validator,
}
